--- a/doc/api.texi
+++ b/doc/api.texi
@@ -16,12 +16,8 @@ notice and this notice are preserved.
 
 @insertcopying
 
-@chapter irc
-@section The irc object
-
-tralalala
-
-@subsection irc object api
+@chapter IRC
+@section IRC API
 @deffn {Procedure} make-irc [#:nick=``bot''] [#:realname=``bot''] @
 [#:hostname=``localhost''] [#:server=''localhost''] [#:port=6667] @
 [#:password=''#f'']
@@ -61,7 +57,6 @@ Set the field of @code{irc-object} @var{obj}. @var{set-port!} expects a valid po
 Note that it is not possible to set a value when connected. Trying to do so will result in an error.
 @end deffn
 
-@subsection irc commands
 @deffn {Procedure} do-nick obj nick
 Not yet implemented.
 @end deffn
@@ -144,7 +139,7 @@ Return the channels joined by @code{irc-object} @var{obj} as list.
 Returns @code{#t} if channel @var{chan} is joined, @code{#f} otherwise.
 @end deffn
 
-@chapter message handling
+@chapter Message handling
 
 Messages are parsed according to the 'pseudo' BNF in RFC 1459 (@uref{http://www.ietf.org/rfc/rfc1459.txt}).
 
@@ -167,7 +162,10 @@ Messages are parsed according to the 'pseudo' BNF in RFC 1459 (@uref{http://www.
     CR LF 
 @end verbatim
 
-@section message-object
+@section Message API
+@deffn {Module} (irc message)
+@end deffn
+
 @deffn {Procedure} parse-message-string msg
 Parse the message string @var{msg} into an @code{message-object}.
 @end deffn
@@ -203,7 +201,7 @@ Returns a string or #f.
 Returns a timestamp as created by (current-time).
 @end deffn
 
-@section Message handling helpers
+@subsection Message handling helpers
 
 @deffn {Procedure} parse-source msg
 Find the source or @code{message-object} @var{msg}. If the source is found the return value is a string, otherwise it is @code{#f}.
