New build system using autotools instead of a static makefile.

--- a/doc/api.texi
+++ b/doc/api.texi
@@ -1,6 +1,6 @@
 \input texinfo @c -*- texinfo -*-
 @c
-@setfilename guile-irc-api.texi
+@setfilename api.info
 @settitle    Preliminary API reference manual
 @c
 
