--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,6 @@
 Bas Smit "fbs" (fbs.devv@gmail.com)
+
+These people, in no particular order, have helped develop guile-irc, for example by
+sending in patches, writing new modules or finding significant bugs:
+
 Andreas W "add^_" (unknown.areth@gmail.com)
