Updated fbs' email

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Bas Smit "fbs" (fbs.devv@gmail.com)
+Bas Smit "fbs" (bas@baslab.org)
 
 These people, in no particular order, have helped develop guile-irc, for example by
 sending in patches, writing new modules or finding significant bugs:
